--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.1",
+    "expo": "^38.0.8",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
